to fixe scrool on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -233,14 +233,16 @@ body {
 @media screen and (max-width: 800px) {
   body {
     overflow-y: auto;
-    background-image: url(./assets/img/desk_mobile.jpg);
+    background: url(./assets/img/desk_mobile.jpg) center/cover no-repeat;
     background-size: cover;
     background-position: fixed;
     background-attachment: fixed;
     z-index: 0;
-    animation: AnimateBG 500s ease infinite;
+    animation: AnimateBG 400s ease infinite;
     scroll-behavior: smooth;
     overflow: auto;
+    width: 100%;
+    height: 100%;
   }
 
   @keyframes AnimateBG {
